--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  height: 100vh;
+  padding-top: 10px;
+  background-color: #6e6ec6;
+  font-family: Lato, sans-serif;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+/* .freecodecamp-logo-contenidor {
+  width: 100%;
+  height: 50px;
+  margin: 8px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.freecodecamp-logo {
+  height: 40px;
+} */
+
+.contenidor-calculadora {
+  width: 400px;
+  padding: 14px;
+  background-color: #8edae8;
+  border-radius: 40px;
+  border: 5px solid white;
+  box-shadow: 0px 4px 20px 12px #505088;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.fila {
+  margin: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
