--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   height: 100vh;
   padding-top: 10px;
-  background-color: #6e6ec6;
+  background-color: #c5e4ff;
   font-family: Lato, sans-serif;
   display: flex;
   flex-wrap: wrap;
@@ -9,26 +9,13 @@
   align-items: center;
 }
 
-/* .freecodecamp-logo-contenidor {
-  width: 100%;
-  height: 50px;
-  margin: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.freecodecamp-logo {
-  height: 40px;
-} */
-
 .contenidor-calculadora {
   width: 400px;
   padding: 14px;
-  background-color: #8edae8;
+  background-color: #dadeff;
   border-radius: 40px;
   border: 5px solid white;
-  box-shadow: 0px 4px 20px 12px #505088;
+  box-shadow: 0px 4px 20px 12px #7c92a5;
 }
 
 .fila {
