--- a/src/stylesheets/Boto.css
+++ b/src/stylesheets/Boto.css
@@ -6,7 +6,7 @@
   align-items: center;
   font-weight: bold;
   font-size: 38px;
-  background-color: #3d3d70;
+  background-color: #61ada8;
   color: white;
   border-radius: 30px;
   border: 2px solid white;
@@ -16,13 +16,14 @@
 }
 
 .boto-contenidor:hover {
-  background-color: #6c6cf0;
+  background-color: #4df0e6;
 }
 
 .operador {
-  background-color: #449d66;
+  background-color: #9dac55;
+  border-radius: 50px;
 }
 
 .operador:hover {
-  background-color: #21f472;
+  background-color: #c3dc4e;
 }
