--- a/src/stylesheets/Pantalla.css
+++ b/src/stylesheets/Pantalla.css
@@ -7,11 +7,10 @@
   align-items: center;
   font-weight: bold;
   font-size: 30px;
-  background-color: #2d3951;
+  background-color: #4f628a;
   color: white;
   padding: 11px;
   padding-right: 30px;
-  margin: 1px solid #888;
-  border: 4px solid #2f2626;
+  border: 4px solid #293c65;
   /* box-shadow: -1px 4px 1px 1px white; */
 }
